--- a/src/quickgui/CMakeLists.txt
+++ b/src/quickgui/CMakeLists.txt
@@ -4,6 +4,7 @@ SET(QGIS_QUICK_GUI_MOC_HDRS
   qgsquickplugin.h
   qgsquickmapsettings.h
   qgsquicklayertreemodel.h
+  qgsquickscalebarkit.h
 )
 
 SET(QGIS_QUICK_GUI_SRC
@@ -12,12 +13,14 @@ SET(QGIS_QUICK_GUI_SRC
   qgsquickmapcanvasmap.cpp
   qgsquickmapsettings.cpp
   qgsquicklayertreemodel.cpp
+  qgsquickscalebarkit.cpp
 )
 
 SET(QGIS_QUICK_GUI_QMLS
   qmldir
   qgsquickmapcanvas.qml
   qgsquicklayertreeview.qml
+  qgsquickscalebar.qml
 )
 
 INCLUDE_DIRECTORIES(
@@ -79,22 +82,22 @@ SET_TARGET_PROPERTIES(qgis_quick PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${QUICK_GUI
 ADD_DEFINITIONS(-DCORE_EXPORT=)
 
 # QML Types Info (QtCreator QML, only usefull for development, so skip for android)
+# TODO move to findmodule & MACRO
 IF(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Android")
-  SET(QGIS_QUICK_QUI_TYPEINFO ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/QgisQuick/QgisQuick.qmltypes)
+  SET(QGIS_QUICK_QUI_TYPEINFO ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/QgisQuick/qgisquick.qmltypes)
   FIND_PROGRAM(qmlplugindump_exe qmlplugindump)
   IF(NOT qmlplugindump_exe)
     MESSAGE(FATAL_ERROR "Could not locate qmlplugindump.")
   ELSE (NOT qmlplugindump_exe)
-    MESSAGE(STATUS "qmlplugindump: ${qmlplugindump_exe}")
     ADD_CUSTOM_COMMAND(
         TARGET qgis_quick
         COMMAND ${qmlplugindump_exe}
-        ARGS QgisQuick 1.0 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} --output ${QGIS_QUICK_QUI_TYPEINFO}
+        ARGS QgisQuick 1.0 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} --output ${QGIS_QUICK_QUI_TYPEINFO} --noinstantiate
         DEPENDS ${QGIS_QUICK_GUI_QMLS}
+        WORKING_DIRECTORY "${QMLPLUGINDUMP_WORK_DIR}"
         POST_BUILD
     )
   ENDIF(NOT qmlplugindump_exe)
-  SET(QML_IMPORT_PATH "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}" CACHE STRING "Qt Creator extra QML import paths")
 ENDIF(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Android")
 
 # QML plugin installation
