move quick app to test/src

--- a/src/quickgui/CMakeLists.txt
+++ b/src/quickgui/CMakeLists.txt
@@ -1,26 +1,36 @@
+############################################################
+# sources
+
+SET(QGIS_QUICK_PLUGIN_MOC_HDRS
+  qgsquickplugin.h
+)
+
+SET(QGIS_QUICK_PLUGIN_SRC
+  qgsquickplugin.cpp
+)
+
+SET(QGIS_QUICK_PLUGIN_QMLS
+  qmldir
+  qgsquickmapcanvas.qml
+  qgsquickscalebar.qml
+)
+
 SET(QGIS_QUICK_GUI_MOC_HDRS
   qgsquickproject.h
   qgsquickmapcanvasmap.h
-  qgsquickplugin.h
   qgsquickmapsettings.h
-  qgsquicklayertreemodel.h
   qgsquickscalebarkit.h
+)
+
+SET(QGIS_QUICK_GUI_HDRS
+  qgis_quick.h
 )
 
 SET(QGIS_QUICK_GUI_SRC
   qgsquickproject.cpp
-  qgsquickplugin.cpp
   qgsquickmapcanvasmap.cpp
   qgsquickmapsettings.cpp
-  qgsquicklayertreemodel.cpp
   qgsquickscalebarkit.cpp
-)
-
-SET(QGIS_QUICK_GUI_QMLS
-  qmldir
-  qgsquickmapcanvas.qml
-  qgsquicklayertreeview.qml
-  qgsquickscalebar.qml
 )
 
 INCLUDE_DIRECTORIES(
@@ -60,49 +70,74 @@ INCLUDE_DIRECTORIES(SYSTEM
   ${QCA_INCLUDE_DIR}
   ${QTKEYCHAIN_INCLUDE_DIR}
 )
-
-QT5_WRAP_CPP(QGIS_QUICK_GUI_MOC_SRCS ${QGIS_QUICK_GUI_MOC_HDRS})
-
-IF(MSVC)
-  SET_SOURCE_FILES_PROPERTIES(${QGIS_CORE_MOC_SRCS} PROPERTIES COMPILE_FLAGS "/wd4512 /wd4996" )
-ELSE(MSVC)
-  SET_SOURCE_FILES_PROPERTIES(${QGIS_CORE_MOC_SRCS} PROPERTIES COMPILE_FLAGS "-Wno-deprecated-declarations" )
-ENDIF(MSVC)
-
-# QML plugin
-SET(QUICK_GUI_RUNTIME_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/QgisQuick)
-FOREACH (QML_FILE ${QGIS_QUICK_GUI_QMLS})
-  GET_FILENAME_COMPONENT(QML_FILENAME ${QML_FILE} NAME)
-  CONFIGURE_FILE(${QML_FILE} ${QUICK_GUI_RUNTIME_DIR}/${QML_FILENAME} COPYONLY)
-ENDFOREACH(QML_FILE)
-
-ADD_LIBRARY(qgis_quick MODULE ${QGIS_QUICK_GUI_SRC} ${QGIS_QUICK_GUI_MOC_HDRS} ${QGIS_QUICK_GUI_MOC_SRCS} ${QGIS_QUICK_GUI_QMLS})
-TARGET_LINK_LIBRARIES(qgis_quick Qt5::Quick Qt5::Qml qgis_core Qt5::Xml Qt5::Widgets Qt5::Concurrent Qt5::Positioning)
-SET_TARGET_PROPERTIES(qgis_quick PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${QUICK_GUI_RUNTIME_DIR})
 ADD_DEFINITIONS(-DCORE_EXPORT=)
 
-# QML Types Info (QtCreator QML, only usefull for development, so skip for android)
-# TODO move to findmodule & MACRO
-IF(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Android")
-  SET(QGIS_QUICK_QUI_TYPEINFO ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/QgisQuick/qgisquick.qmltypes)
-  FIND_PROGRAM(qmlplugindump_exe qmlplugindump)
-  IF(NOT qmlplugindump_exe)
-    MESSAGE(FATAL_ERROR "Could not locate qmlplugindump.")
-  ELSE (NOT qmlplugindump_exe)
-    ADD_CUSTOM_COMMAND(
-        TARGET qgis_quick
-        COMMAND ${qmlplugindump_exe}
-        ARGS QgisQuick 1.0 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} --output ${QGIS_QUICK_QUI_TYPEINFO} --noinstantiate
-        DEPENDS ${QGIS_QUICK_GUI_QMLS}
-        WORKING_DIRECTORY "${QMLPLUGINDUMP_WORK_DIR}"
-        POST_BUILD
-    )
-  ENDIF(NOT qmlplugindump_exe)
-ENDIF(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Android")
+############################################################
+# qgis_quick shared library
+QT5_WRAP_CPP(QGIS_QUICK_GUI_MOC_SRCS ${QGIS_QUICK_GUI_MOC_HDRS})
+IF(MSVC)
+  SET_SOURCE_FILES_PROPERTIES(${QGIS_QUICK_GUI_MOC_SRCS} PROPERTIES COMPILE_FLAGS "/wd4512 /wd4996" )
+ELSE(MSVC)
+  SET_SOURCE_FILES_PROPERTIES(${QGIS_QUICK_GUI_MOC_SRCS} PROPERTIES COMPILE_FLAGS "-Wno-deprecated-declarations" )
+ENDIF(MSVC)
 
-# QML plugin installation
-SET(QUICK_GUI_INSTALL_DIR ${QGIS_QML_DIR}/QgisQuick)
+ADD_LIBRARY(qgis_quick SHARED
+    ${QGIS_QUICK_GUI_SRC}
+    ${QGIS_QUICK_GUI_MOC_HDRS}
+    ${QGIS_QUICK_GUI_MOC_SRCS}
+    ${QGIS_QUICK_GUI_HDRS})
+TARGET_LINK_LIBRARIES(qgis_quick Qt5::Quick Qt5::Qml Qt5::Xml Qt5::Widgets Qt5::Concurrent Qt5::Positioning qgis_core)
+
+# Installation
 INSTALL(TARGETS qgis_quick
+  RUNTIME DESTINATION ${QGIS_BIN_DIR}
+  LIBRARY DESTINATION ${QGIS_LIB_DIR}
+  ARCHIVE DESTINATION ${QGIS_LIB_DIR}
+  FRAMEWORK DESTINATION ${QGIS_FW_SUBDIR}
+  PUBLIC_HEADER DESTINATION ${QGIS_INCLUDE_DIR})
+
+############################################################
+# qgis_quick_plugin module (QML) library
+
+QT5_WRAP_CPP(QGIS_QUICK_PLUGIN_MOC_SRCS ${QGIS_QUICK_PLUGIN_MOC_HDRS})
+IF(MSVC)
+  SET_SOURCE_FILES_PROPERTIES(${QGIS_QUICK_PLUGIN_MOC_SRCS} PROPERTIES COMPILE_FLAGS "/wd4512 /wd4996" )
+ELSE(MSVC)
+  SET_SOURCE_FILES_PROPERTIES(${QGIS_QUICK_PLUGIN_MOC_SRCS} PROPERTIES COMPILE_FLAGS "-Wno-deprecated-declarations" )
+ENDIF(MSVC)
+
+SET(QGIS_QUICK_PLUGIN_RUNTIME_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/QgisQuick)
+FOREACH (QML_FILE ${QGIS_QUICK_PLUGIN_QMLS})
+  GET_FILENAME_COMPONENT(QML_FILENAME ${QML_FILE} NAME)
+  CONFIGURE_FILE(${QML_FILE} ${QGIS_QUICK_PLUGIN_RUNTIME_DIR}/${QML_FILENAME} COPYONLY)
+ENDFOREACH(QML_FILE)
+
+ADD_LIBRARY(qgis_quick_plugin MODULE
+    ${QGIS_QUICK_PLUGIN_SRC}
+    ${QGIS_QUICK_PLUGIN_MOC_HDRS}
+    ${QGIS_QUICK_PLUGIN_MOC_SRCS}
+    ${QGIS_QUICK_PLUGIN_QMLS}
+)
+TARGET_LINK_LIBRARIES(qgis_quick_plugin qgis_quick)
+SET_TARGET_PROPERTIES(qgis_quick_plugin PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${QGIS_QUICK_PLUGIN_RUNTIME_DIR})
+TARGET_COMPILE_DEFINITIONS(qgis_quick_plugin PRIVATE "-DQUICK_EXPORT=")
+
+IF(QMLPLUGINDUMP_FOUND)
+  # QML Types Info (QtCreator QML, only usefull for development)
+  SET(QGIS_QUICK_QUI_TYPEINFO ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/QgisQuick/qgisquick.qmltypes)
+  ADD_CUSTOM_COMMAND(
+      TARGET qgis_quick_plugin
+      COMMAND ${QMLPLUGINDUMP_EXECUTABLE}
+      ARGS QgisQuick 1.0 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} --output ${QGIS_QUICK_QUI_TYPEINFO} --noinstantiate
+      DEPENDS ${QGIS_QUICK_PLUGIN_QMLS}
+      WORKING_DIRECTORY "${QMLPLUGINDUMP_WORK_DIR}"
+      POST_BUILD
+  )
+ENDIF(QMLPLUGINDUMP_FOUND)
+
+# Installation
+SET(QUICK_GUI_INSTALL_DIR ${QGIS_QML_DIR}/QgisQuick)
+INSTALL(TARGETS qgis_quick_plugin
   RUNTIME DESTINATION ${QUICK_GUI_INSTALL_DIR}
   LIBRARY DESTINATION ${QUICK_GUI_INSTALL_DIR}
 )
