--- a/tests/src/CMakeLists.txt
+++ b/tests/src/CMakeLists.txt
@@ -46,4 +46,7 @@ IF (ENABLE_TESTS)
     ADD_SUBDIRECTORY(python)
   ENDIF (WITH_BINDINGS)
   ADD_SUBDIRECTORY(geometry_checker)
+  IF (WITH_QTQUICK)
+    ADD_SUBDIRECTORY(quickapp)
+  ENDIF (WITH_QTQUICK)
 ENDIF (ENABLE_TESTS)
