--- a/tests/src/quickapp/CMakeLists.txt
+++ b/tests/src/quickapp/CMakeLists.txt
@@ -1,9 +1,15 @@
+SET(QGIS_QUICK_APP_MOC_HDRS
+  qgsquicklayertreemodel.h
+)
+
 SET(QGIS_QUICK_APP_SRCS
   main.cpp
+  qgsquicklayertreemodel.cpp
 )
 
 SET(QGIS_QUICK_APP_QMLS
   main.qml
+  LayerTreeView.qml
 )
 
 INCLUDE_DIRECTORIES(
@@ -28,9 +34,11 @@ INCLUDE_DIRECTORIES(
   ${CMAKE_SOURCE_DIR}/src/core/metadata
   ${CMAKE_SOURCE_DIR}/src/core/expression
   ${CMAKE_SOURCE_DIR}/src/native
+  ${CMAKE_SOURCE_DIR}/src/quickgui
 
   ${CMAKE_BINARY_DIR}/src/core
   ${CMAKE_BINARY_DIR}/src/native
+  ${CMAKE_BINARY_DIR}/src/quickgui
 )
 
 INCLUDE_DIRECTORIES(SYSTEM
@@ -46,10 +54,18 @@ INCLUDE_DIRECTORIES(SYSTEM
   ${QTKEYCHAIN_INCLUDE_DIR}
 )
 
+QT5_WRAP_CPP(QGIS_QUICK_APP_MOC_HDRS ${QGIS_QUICK_APP_MOC_HDRS})
 QT5_ADD_RESOURCES(QGIS_QUICK_APP_RESOURCES qml.qrc)
-SET(QGIS_QUICK_APP_NAME ${QGIS_APP_NAME}quick)
-ADD_EXECUTABLE(${QGIS_QUICK_APP_NAME} ${QGIS_QUICK_APP_RESOURCES} ${QGIS_QUICK_APP_QMLS} ${QGIS_QUICK_APP_SRCS})
-TARGET_LINK_LIBRARIES(${QGIS_QUICK_APP_NAME} Qt5::Gui Qt5::Qml Qt5::Quick Qt5::Xml Qt5::Widgets qgis_core)
+SET(QGIS_QUICK_APP_NAME qgis_quickapp)
+ADD_EXECUTABLE(${QGIS_QUICK_APP_NAME}
+    ${QGIS_QUICK_APP_RESOURCES}
+    ${QGIS_QUICK_APP_QMLS}
+    ${QGIS_QUICK_APP_SRCS}
+    ${QGIS_QUICK_APP_MOC_HDRS}
+    ${QGIS_QUICK_APP_MOC_HDRS}
+)
+
+TARGET_LINK_LIBRARIES(${QGIS_QUICK_APP_NAME} Qt5::Gui Qt5::Qml Qt5::Quick Qt5::Xml Qt5::Widgets qgis_core qgis_quick)
 SET_TARGET_PROPERTIES(${QGIS_QUICK_APP_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
 ADD_DEFINITIONS(-DQGIS_QUICK_DATA_PATH="${CMAKE_CURRENT_SOURCE_DIR}/android/assets/qgis-data")
 INSTALL(TARGETS ${QGIS_QUICK_APP_NAME}
@@ -58,3 +74,5 @@ INSTALL(TARGETS ${QGIS_QUICK_APP_NAME}
   ARCHIVE DESTINATION ${QGIS_LIB_DIR}
   FRAMEWORK DESTINATION ${QGIS_FW_SUBDIR}
   PUBLIC_HEADER DESTINATION ${QGIS_INCLUDE_DIR})
+  
+ADD_TEST(qgis_quickapptest ${CMAKE_CURRENT_BINARY_DIR}/../../../output/bin/qgis_quickapp --version)
