move quick app to test/src

--- a/tests/src/CMakeLists.txt
+++ b/tests/src/CMakeLists.txt
@@ -45,4 +45,7 @@ IF (ENABLE_TESTS)
   IF (WITH_BINDINGS)
     ADD_SUBDIRECTORY(python)
   ENDIF (WITH_BINDINGS)
+  IF (WITH_QTQUICK)
+    ADD_SUBDIRECTORY(quickapp)
+  ENDIF (WITH_QTQUICK)
 ENDIF (ENABLE_TESTS)
