--- a/tests/src/quickapp/CMakeLists.txt
+++ b/tests/src/quickapp/CMakeLists.txt
@@ -68,11 +68,13 @@ ADD_EXECUTABLE(${QGIS_QUICK_APP_NAME}
 TARGET_LINK_LIBRARIES(${QGIS_QUICK_APP_NAME} Qt5::Gui Qt5::Qml Qt5::Quick Qt5::Xml Qt5::Widgets qgis_core qgis_quick)
 SET_TARGET_PROPERTIES(${QGIS_QUICK_APP_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
 ADD_DEFINITIONS(-DQGIS_QUICK_DATA_PATH="${CMAKE_CURRENT_SOURCE_DIR}/android/assets/qgis-data")
+add_dependencies(${QGIS_QUICK_APP_NAME} qgis_quick_plugin)
+
 INSTALL(TARGETS ${QGIS_QUICK_APP_NAME}
   RUNTIME DESTINATION ${QGIS_BIN_DIR}
   LIBRARY DESTINATION ${QGIS_LIB_DIR}
   ARCHIVE DESTINATION ${QGIS_LIB_DIR}
   FRAMEWORK DESTINATION ${QGIS_FW_SUBDIR}
   PUBLIC_HEADER DESTINATION ${QGIS_INCLUDE_DIR})
-  
+
 ADD_TEST(qgis_quickapptest ${CMAKE_CURRENT_BINARY_DIR}/../../../output/bin/qgis_quickapp --version)
