--- a/tests/src/quickapp/CMakeLists.txt
+++ b/tests/src/quickapp/CMakeLists.txt
@@ -69,7 +69,12 @@ TARGET_LINK_LIBRARIES(${QGIS_QUICK_APP_NAME} Qt5::Gui Qt5::Qml Qt5::Quick Qt5::X
 SET_TARGET_PROPERTIES(${QGIS_QUICK_APP_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
 ADD_DEFINITIONS(-DQGIS_QUICK_DATA_PATH="${CMAKE_CURRENT_SOURCE_DIR}/android/assets/qgis-data")
 TARGET_COMPILE_DEFINITIONS(${QGIS_QUICK_APP_NAME} PRIVATE "-DDQT_NO_FOREACH")
-ADD_DEPENDENCIES(${QGIS_QUICK_APP_NAME} qgis_quick_plugin)
+ADD_DEPENDENCIES(${QGIS_QUICK_APP_NAME}
+    qgis_quick_plugin
+    ogrprovider
+    gdalprovider
+    spatialiteprovider
+    virtuallayerprovider)
 
 INSTALL(TARGETS ${QGIS_QUICK_APP_NAME}
   RUNTIME DESTINATION ${QGIS_BIN_DIR}
