--- a/src/quickgui/plugin/CMakeLists.txt
+++ b/src/quickgui/plugin/CMakeLists.txt
@@ -115,13 +115,13 @@ IF(QMLPLUGINDUMP_FOUND)
 ENDIF(QMLPLUGINDUMP_FOUND)
 
 # Installation
-SET(QUICK_GUI_INSTALL_DIR ${QGIS_QML_DIR}/QgisQuick)
+SET(QUICK_PLUGIN_INSTALL_DIR ${QGIS_QML_DIR}/QgisQuick)
 INSTALL(TARGETS qgis_quick_plugin
-  RUNTIME DESTINATION ${QUICK_GUI_INSTALL_DIR}
-  LIBRARY DESTINATION ${QUICK_GUI_INSTALL_DIR}
+  RUNTIME DESTINATION ${QUICK_PLUGIN_INSTALL_DIR}
+  LIBRARY DESTINATION ${QUICK_PLUGIN_INSTALL_DIR}
 )
-INSTALL(FILES ${QGIS_QUICK_GUI_QMLS} ${QGIS_QUICK_QUI_TYPEINFO}
-  DESTINATION ${QUICK_GUI_INSTALL_DIR}
+INSTALL(FILES ${QGIS_QUICK_PLUGIN_RESOURCES} ${QGIS_QUICK_QUI_TYPEINFO}
+  DESTINATION ${QUICK_PLUGIN_INSTALL_DIR}
 )
 INSTALL(DIRECTORY ${QGIS_QUICK_PLUGIN_THEMES_DIR}
-    DESTINATION ${QUICK_GUI_INSTALL_DIR})
+    DESTINATION ${QUICK_PLUGIN_INSTALL_DIR})
