--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -307,9 +307,11 @@ IF(WITH_CORE)
   IF (WITH_QTQUICK)
     FIND_PACKAGE(Qt5Qml REQUIRED)
     FIND_PACKAGE(Qt5Quick REQUIRED)
-    IF(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Android")
-        FIND_PACKAGE(QtQmlTools REQUIRED)
-    ENDIF(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Android")
+    IF(${CMAKE_SYSTEM_NAME} MATCHES "Android")
+        FIND_PACKAGE(Qt5AndroidExtras)
+    ELSE(${CMAKE_SYSTEM_NAME} MATCHES "Android")
+        FIND_PACKAGE(QtQmlTools REQUIRED)    
+    ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Android")
   ENDIF (WITH_QTQUICK)
   
   IF(WITH_QTWEBKIT)
