--- a/src/quickgui/plugin/CMakeLists.txt
+++ b/src/quickgui/plugin/CMakeLists.txt
@@ -103,13 +103,13 @@ TARGET_COMPILE_DEFINITIONS(qgis_quick_plugin PRIVATE "-DQUICK_EXPORT=" "-DDQT_NO
 
 IF(QMLPLUGINDUMP_FOUND)
   # QML Types Info (QtCreator QML, only usefull for development)
-  SET(QGIS_QUICK_QUI_TYPEINFO ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/QgisQuick/qgisquick.qmltypes)
+  SET(QGIS_QUICK_PLUGIN_TYPEINFO ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/QgisQuick/qgisquick.qmltypes)
   ADD_CUSTOM_COMMAND(
       TARGET qgis_quick_plugin
       COMMAND ${QMLPLUGINDUMP_EXECUTABLE}
-      ARGS QgisQuick 1.0 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} --output ${QGIS_QUICK_QUI_TYPEINFO} --noinstantiate
+      ARGS QgisQuick 1.0 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} --output ${QGIS_QUICK_PLUGIN_TYPEINFO} --noinstantiate
       DEPENDS ${QGIS_QUICK_PLUGIN_RESOURCES}
-      WORKING_DIRECTORY "${QMLPLUGINDUMP_WORK_DIR}"
+      WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
       POST_BUILD
   )
 ENDIF(QMLPLUGINDUMP_FOUND)
@@ -120,7 +120,7 @@ INSTALL(TARGETS qgis_quick_plugin
   RUNTIME DESTINATION ${QUICK_PLUGIN_INSTALL_DIR}
   LIBRARY DESTINATION ${QUICK_PLUGIN_INSTALL_DIR}
 )
-INSTALL(FILES ${QGIS_QUICK_PLUGIN_RESOURCES} ${QGIS_QUICK_QUI_TYPEINFO}
+INSTALL(FILES ${QGIS_QUICK_PLUGIN_RESOURCES} ${QGIS_QUICK_PLUGIN_TYPEINFO}
   DESTINATION ${QUICK_PLUGIN_INSTALL_DIR}
 )
 INSTALL(DIRECTORY ${QGIS_QUICK_PLUGIN_THEMES_DIR}
