--- a/src/quickgui/plugin/CMakeLists.txt
+++ b/src/quickgui/plugin/CMakeLists.txt
@@ -18,6 +18,7 @@ SET(QGIS_QUICK_PLUGIN_RESOURCES
     
   qgsquickmapcanvas.qml
   qgsquickfeatureform.qml
+  qgsquickpositionmarker.qml
 
   qmldir
 )
