Renamed photopanel file Stratch photopreview according camera ratio Changed icon

--- a/src/quickgui/plugin/CMakeLists.txt
+++ b/src/quickgui/plugin/CMakeLists.txt
@@ -19,7 +19,7 @@ SET(QGIS_QUICK_PLUGIN_RESOURCES
   qgsquickmapcanvas.qml
   qgsquickfeatureform.qml
   qgsquickpositionmarker.qml
-  qgsquickphotocontainer.qml
+  qgsquickphotopanel.qml
 
   qmldir
 )
