rebase with lastest master

--- a/tests/src/CMakeLists.txt
+++ b/tests/src/CMakeLists.txt
@@ -47,6 +47,6 @@ IF (ENABLE_TESTS)
   ENDIF (WITH_BINDINGS)
   ADD_SUBDIRECTORY(geometry_checker)
   IF (WITH_QTQUICK)
-    ADD_SUBDIRECTORY(quickapp)
+    ADD_SUBDIRECTORY(quickgui)
   ENDIF (WITH_QTQUICK)
 ENDIF (ENABLE_TESTS)
