--- a/tests/src/quickgui/CMakeLists.txt
+++ b/tests/src/quickgui/CMakeLists.txt
@@ -80,6 +80,7 @@ ENDMACRO (ADD_QGIS_TEST)
 
 ADD_QGIS_TEST(qgsquickutils testqgsquickutils.cpp)
 ADD_QGIS_TEST(qgsquickscalebarkit testqgsquickscalebarkit.cpp)
+ADD_QGIS_TEST(qgsquickpositionkit testqgsquickpositionkit.cpp)
 
 
 #############################################################
