--- a/src/quickgui/CMakeLists.txt
+++ b/src/quickgui/CMakeLists.txt
@@ -1,10 +1,13 @@
 ############################################################
 # sources
 SET(QGIS_QUICK_GUI_MOC_HDRS
+  qgsquickcoordinatetransformer.h
   qgsquickmapcanvasmap.h
   qgsquickmapsettings.h
   qgsquickmessagelogmodel.h
+  qgsquickpositionkit.h
   qgsquickscalebarkit.h
+  qgsquicksimulatedpositionsource.h
   qgsquickutils.h
 )
 
@@ -12,10 +15,13 @@ SET(QGIS_QUICK_GUI_HDRS
 )
 
 SET(QGIS_QUICK_GUI_SRC
+  qgsquickcoordinatetransformer.cpp
   qgsquickmapcanvasmap.cpp
   qgsquickmapsettings.cpp
   qgsquickmessagelogmodel.cpp
+  qgsquickpositionkit.cpp
   qgsquickscalebarkit.cpp
+  qgsquicksimulatedpositionsource.cpp
   qgsquickutils.cpp
 )
 
@@ -58,6 +64,10 @@ INCLUDE_DIRECTORIES(SYSTEM
 )
 
 ADD_DEFINITIONS(-DCORE_EXPORT=)
+
+
+SET(QGIS_QUICK_GUI_IMAGE_RCCS ./images/images.qrc)
+QT5_ADD_RESOURCES(QGIS_QUICK_GUI_IMAGE_RCC_SRCS ${QGIS_QUICK_GUI_IMAGE_RCCS})
 
 ############################################################
 # qgis_quick shared library
